Bug 453289 - Dolphin doesn't mark the parent folder when Up button is being used
Summary: Dolphin doesn't mark the parent folder when Up button is being used
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: URL navigator (other bugs)
Version First Reported In: 5.93.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
: 453176 453347 455035 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-02 09:26 UTC by Nick Stefanov
Modified: 2022-06-08 19:26 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.95
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Stefanov 2022-05-02 09:26:57 UTC
SUMMARY
***
Dolphin doesn't mark the parent folder when Up button is being used. It used to work fine but after some upgrade it stoped. It's very inconvenient with directories with bunch of folders.
***


STEPS TO REPRODUCE
1. Enter a folder.
2. Exit the folder using the Up button (it's working with Back button).

OBSERVED RESULT
The parent folder isn't marked/selected.

EXPECTED RESULT
The parent folder should be marked/selected.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Comment 1 Nate Graham 2022-05-03 17:56:26 UTC
*** Bug 453176 has been marked as a duplicate of this bug. ***
Comment 2 Nick Stefanov 2022-05-03 18:11:48 UTC
@Nate,
I don't think this problem is the same. For me Dolphin doesn't select anything when Up is being used.
Comment 3 Nate Graham 2022-05-04 16:04:00 UTC
*** Bug 453347 has been marked as a duplicate of this bug. ***
Comment 4 php4fan 2022-05-04 16:18:41 UTC
> I don't think this problem is the same. For me Dolphin doesn't select anything when Up is being used.

It's kind of "implicitly selected". It's not fully highlighted with a blue background, but it is underlined with a blue line, and it behaves as selected at least in that, if you hit Enter, it's the one you go into.

The problem, anyway, is that the child folder you're coming from is not selected, and it should (and used to be), so it does seem to be the exact same issue described in the other bugs.

BTW when you say "parent" I think you mean "child". If P is the parent of C and C is the child of P, you navigate from C to P and the one that fails to be selected is C.
Comment 5 Nick Stefanov 2022-05-04 18:09:21 UTC
Yes, I now checked it and it's indeed underlined, you're right :)

I don't know if it will be parent or child (I'm a non-native speaker), but I think everybody realized what the problem is :)
Comment 6 Felix Ernst 2022-05-05 12:41:05 UTC
I can not reproduce this bug on current master. It seems to select the child folder one has emerged from correctly after using the "Up" action.

>It's kind of "implicitly selected". It's not fully highlighted with a blue background,
>but it is underlined with a blue line, and it behaves as selected at least in that,
>if you hit Enter, it's the one you go into.

This is actually the behaviour I would prefer in general. We have a bug report that wishes for this behaviour to be implemented everywhere. See https://bugs.kde.org/show_bug.cgi?id=424723.

It is true that the behaviour reported here is currently inconsistent and I don't know what caused this but I would rather see https://bugs.kde.org/show_bug.cgi?id=424723 fixed than this one. But since we already seem to be back to the old behaviour on master, I guess this will have to wait.
Comment 7 php4fan 2022-05-05 13:32:00 UTC
> This is actually the behaviour I would prefer in general. 

To clarify, the folder that gets underlined now (after this regression has appeared) is the first one in the folder, NOT the one you came from.
If you suggest that *the folder you came from* gets just underlined (like the first folder is now) instead of fully selected (like the folder you came from used to be), I'm not sure of all the implications of that, but I think it's fine, as long as, at least:
- pressing enter will enter that folder
- using the right arrows will select the folder next to that one.
which I think is what would happen, since it's what now happens to the first folder, which gets underlined.
Comment 8 sausagefactory0 2022-05-08 06:11:50 UTC
Can confirm, it's always the first folder that gets underlined, not the folder I navigated from using UP. Also I'm sure it was working correctly a few months ago, so it must be a recent regression.
Comment 9 Felix Ernst 2022-05-08 10:56:01 UTC
>To clarify, the folder that gets underlined now (after this regression has appeared)
>is the first one in the folder, NOT the one you came from.

Oh okay. I had missed this.

>If you suggest that *the folder you came from* gets just underlined (like the first folder is now)
>instead of fully selected (like the folder you came from used to be), I'm not sure of all the
>implications of that, but I think it's fine, as long as, at least: […]

Yes, that is what the other bug reporter is suggesting and I am agreeing with. But now that I saw that the old behaviour is already back in the current master development branch, this is now not related to this bug report anymore.
Comment 10 sausagefactory0 2022-05-14 11:16:21 UTC
> I can not reproduce this bug on current master. It seems to select the child
> folder one has emerged from correctly after using the "Up" action.

I installed dolphin-git-22.04.0.r67.g0fc218fd2-1 from AUR on Arch Linux, which is supposed to be the current master, and the bug still reproduces. The folder that's underlined is always the first, and not the one I navigated up from.
Comment 11 Felix Ernst 2022-05-16 12:50:50 UTC
I can now also reproduce the bug on master. Not sure why I wasn't able to reproduce it the last time I tried.
Comment 12 Nick Stefanov 2022-05-16 12:57:40 UTC
It's a crucial behaviour and without it it's a nightmare. Let's hope for a quick fix.
Comment 13 Felix Ernst 2022-05-16 16:40:57 UTC
>I can now also reproduce the bug on master.
>Not sure why I wasn't able to reproduce it the last time I tried.

The reason why I wasn't able to reproduce with Dolphin master was that the regression was introduced by a change in frameworks and not by a change in Dolphin. Since I had updated frameworks since then I was suddenly able to reproduce the bug on master.

I was successful in identifying the faulty commit in the KIO framework: https://invent.kde.org/frameworks/kio/-/commit/fdacbf4e290c856a72a5988f5a612360a76af896 It was the first commit I tried because it looked like it might be the reason.

I am therefore moving this bug to KIO now since framework changes shouldn't cause regressions in application code. I'll also let the person responsible for this regression know that this bug exists. I hope they will be able to fix it quickly.
Comment 14 Nick Stefanov 2022-05-16 20:54:46 UTC
@Felix Ernst
Thank you so much!
Comment 15 Felix Ernst 2022-05-17 09:10:43 UTC
You are welcome!
Comment 16 Bug Janitor Service 2022-06-04 18:44:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/862
Comment 17 Jim Jones 2022-06-05 09:18:26 UTC
(In reply to Bug Janitor Service from comment #16)
> A possibly relevant merge request was started @
> https://invent.kde.org/frameworks/kio/-/merge_requests/862

the patch fixes the bug for me
Comment 18 Nate Graham 2022-06-08 18:54:34 UTC
*** Bug 455035 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2022-06-08 19:12:07 UTC
Git commit 75c62a2d436b359bde211b7255895ed04595ce20 by Nate Graham, on behalf of Janet Blackquill.
Committed on 08/06/2022 at 19:12.
Pushed by ngraham into branch 'master'.

KCoreUrlNavigator: add urlSelectionRequested signal

M  +3    -0    src/filewidgets/kurlnavigator.cpp
M  +3    -0    src/gui/kcoreurlnavigator.cpp
M  +12   -0    src/gui/kcoreurlnavigator.h

https://invent.kde.org/frameworks/kio/commit/75c62a2d436b359bde211b7255895ed04595ce20