KCoreUrlNavigator: add urlSelectionRequested signal

BUG: 453289